--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,3 @@
 sdk.dir=/Users/xingchenhe/Library/Android/sdk
 flutter.sdk=/Users/xingchenhe/Documents/work/Flutter/flutter
+flutter.buildMode=release
