--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,18 +21,18 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  tencent_im_sdk_plugin: ^1.0.14
+  tencent_im_sdk_plugin: ^2.0.6
   cupertino_icons: ^0.1.3
   toast: ^0.1.5
   dio: ^3.0.9
-  json_annotation: ^3.1.0
+  json_annotation: ^4.0.1
   provider: ^4.3.2+2
   url_launcher: ^5.7.10
-  shared_preferences: ^0.5.12+4
+  shared_preferences: ^2.0.5
   image_picker: ^0.6.7+14
   flutter_plugin_record: ^0.3.4
   file_picker: ^2.1.0
-  video_player: ^1.0.1
+  video_player: ^2.1.1
   loading: ^1.0.2
   transparent_image: ^1.0.0
   flutter_video_compress: ^0.3.7+8
@@ -50,8 +50,7 @@ dev_dependencies:
     sdk: flutter
   
   permission_handler: ^4.0.0
-  path_provider: ^1.6.22
-  json_serializable: ^3.5.0
+  path_provider: ^2.0.1
   build_runner: ^1.10.3
   
 # For information on the generic Dart part of this file, see the
