--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ description: Demonstrates how to use the tencent_im_sdk_plugin plugin.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -21,37 +21,31 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  tencent_im_sdk_plugin: ^2.0.6
-  cupertino_icons: ^0.1.3
-  toast: ^0.1.5
-  dio: ^3.0.9
+  tencent_im_sdk_plugin: ^3.2.0
+  cupertino_icons: ^1.0.3
+  dio: ^4.0.0
   json_annotation: ^4.0.1
-  provider: ^4.3.2+2
-  url_launcher: ^5.7.10
+  provider: ^5.0.0
+  url_launcher: ^6.0.5
   shared_preferences: ^2.0.5
-  image_picker: ^0.6.7+14
-  flutter_plugin_record: ^0.3.4
-  file_picker: ^2.1.0
+  image_picker: ^0.8.0
+  flutter_plugin_record: ^1.0.1
+  file_picker: ^3.0.2+2
   video_player: ^2.1.1
-  loading: ^1.0.2
-  transparent_image: ^1.0.0
-  flutter_video_compress: ^0.3.7+8
-  # tencent_tpns_oppo_push_plugin: ^0.0.2
-  # tencent_tpns_xiaomi_push_plugin: ^0.0.1
-  # tencent_tpns_vivo_push_plugin: ^0.0.1
-  device_info: ^1.0.0
-  flutter_slidable: ^0.5.7
-  # firebase_messaging: ^6.0.16
-  flutter_apns: ^1.4.1
-  crypto: ^2.1.5
-  
+  transparent_image: ^2.0.0
+  video_thumbnail: ^0.3.3
+  device_info: ^2.0.2
+  flutter_slidable: ^0.6.0
+  crypto: ^3.0.1
+  path_provider: ^2.0.1
+  flutter_easyloading: ^3.0.0
+  loading_indicator: ^2.0.1
+  fluttertoast: ^8.0.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
-  permission_handler: ^4.0.0
-  path_provider: ^2.0.1
-  build_runner: ^1.10.3
+  build_runner: ^2.0.4
   
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
