--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,13 +1,15 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/xingchenhe/Documents/work/Flutter/flutter
-FLUTTER_APPLICATION_PATH=/Users/xingchenhe/Documents/work/git.code.oa.com/TencentIMFlutterDemo
+FLUTTER_ROOT=/Users/bryceyxwang/Documents/flutter/flutter
+FLUTTER_APPLICATION_PATH=/Users/bryceyxwang/Documents/project/TencentIMFlutterDemo
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=lib/main.dart
+FLUTTER_TARGET=/Users/bryceyxwang/Documents/project/TencentIMFlutterDemo/lib/main.dart
 FLUTTER_BUILD_DIR=build
+SYMROOT=${SOURCE_ROOT}/../build/ios
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
 EXCLUDED_ARCHS[sdk=iphonesimulator*]=arm64 i386
+DART_DEFINES=RkxVVFRFUl9XRUJfQVVUT19ERVRFQ1Q9dHJ1ZQ==
 DART_OBFUSCATION=false
-TRACK_WIDGET_CREATION=false
+TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
-PACKAGE_CONFIG=.packages
+PACKAGE_CONFIG=/Users/bryceyxwang/Documents/project/TencentIMFlutterDemo/.dart_tool/package_config.json
