--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,6 +47,12 @@
 	<string>选择照片发送给对方，需要获取您的相册权限</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>App需要您的同意, 才能获取信息</string>
+	<key>NSMicrophoneUsageDescription</key>
+<string>我们需要您的同意才能获取信息</string>
+<key>UIBackgroundModes</key>
+<array>
+    <string>audio</string>
+</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
