[Fix] 修复测试群信息不完整时进入报错的问题

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   loading_indicator: ^2.0.1
   fluttertoast: ^8.0.6
   webview_flutter: ^2.0.10
+  flutter_sound: ^8.2.5
 
 dev_dependencies:
   flutter_test:
