[Mod] 修改语音发送插件

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   fluttertoast: ^8.0.6
   webview_flutter: ^2.0.10
   flutter_sound: ^8.2.5
+  record: ^3.0.0
+  audioplayers: ^0.19.1
+  record_mp3: ^3.0.0
 
 dev_dependencies:
   flutter_test:
