--- a/android/local.properties
+++ b/android/local.properties
@@ -1,3 +1,3 @@
 sdk.dir=/Users/bryceyxwang/Library/Android/sdk
 flutter.sdk=/Users/bryceyxwang/Documents/flutter/flutter
-flutter.buildMode=debug
+flutter.buildMode=release
