--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  tencent_im_sdk_plugin: ^3.2.0
+  tencent_im_sdk_plugin: ^3.3.7
   cupertino_icons: ^1.0.3
   dio: ^4.0.0
   json_annotation: ^4.0.1
@@ -42,6 +42,9 @@ dependencies:
   loading_indicator: ^2.0.1
   fluttertoast: ^8.0.6
   webview_flutter: ^2.0.10
+  flutter_sound: ^8.2.5
+  record: ^3.0.0
+  audioplayers: ^0.19.1
 
 dev_dependencies:
   flutter_test:
